# osgeo-library

./: .gitignore  PROGRESS.md  README.md  annotate_claude.py  chat_cli.py  config.example.toml  config.py  enrich_elements.py  extract_all_pages.py  extract_document.py  extract_figures.py  extract_multimodal.py  generate_comparison.py  generate_page_summaries.py  merge_extractions.py  pyproject.toml  requirements.txt  run_extraction.sh  search_service.py  server.py
.github/workflows/: release.yml
archive/2025-12-29/: enrich_elements.py  extract_all_pages.py  extract_document.py  extract_pdf.py  generate_comparison.py  ingest_to_db.py  migrate_to_db.py  search_service.py  server.py  test_bbox_detection.py  test_enrichment_models.py  test_page_summarization.py
archive/2025-12-29/db_modules/: chunking.py
archive/2025-12-29/embeddings/: embed.py
clients/rust/: Cargo.toml
clients/rust/src/: main.rs
db/: connection.py  schema.sql
doclibrary/: __init__.py  cli.py  config.py
doclibrary/chat/: __init__.py  commands.py  context.py  display.py  query.py
doclibrary/core/: __init__.py  constants.py  formatting.py  image.py  llm.py  text.py
doclibrary/db/: __init__.py  chunking.py  connection.py  ingest.py  schema.sql
doclibrary/db/migrations/: 001_add_summaries.sql
doclibrary/extraction/: __init__.py  document.py  enrichment.py
doclibrary/search/: __init__.py  embeddings.py  service.py
doclibrary/servers/: __init__.py  api.py  mcp.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CLIENT.md  DECISIONS.md  DEPLOYMENT.md  EXTRACTION.md  EXTRACTIONS.md  EXTRACTION_PIPELINE.md  EXTRACTION_PLAN_BATCH2.md  MCP_SERVER_SPEC.md  TODO.md
docs/enrichment_comparison/: mistral-small.json
embeddings/: embed.py
enrichment_comparison/: qwen3-30b.json
reports/: summary_comparison_20251223_202402.md
scripts/: extract_batch.py  extract_remaining.sh  monitor_extraction.sh  resume_incomplete.sh  run_batch2.sh
servers/: bge-m3-cpu.sh  mcp-server.sh  osgeo-library.service  start-server.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_search.py
tests/unit/: __init__.py  test_chunking.py  test_config.py  test_formatting.py  test_text.py
web/: comparison.html  index.html
web/data/: comparisons.json  sam3_claude_p2-4.json
web/data/alpine_change/: extraction.json
web/data/sam3/: extraction.json
web/data/usgs_snyder/: extraction.json
