[package]
name = "osgeo-library-cli"
version = "0.2.5"
edition = "2021"
description = "CLI client for OSGeo Library - search scientific documents"
authors = ["Lorenzo Becchi"]
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Terminal colors and formatting
colored = "2.0"

# Readline for interactive mode
rustyline = "12.0"

# Terminal size detection
terminal_size = "0.3"

# Error handling
anyhow = "1.0"

# Base64 decoding for page images
base64 = "0.21"

# Unix user ID for per-user temp files
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
